src/test/deca/context/invalid/created/assign/assign_class_class.deca
// Description :
//    test  assign entre une classe A et une classe B
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 13: (3.28) Les types A et B sont incompatibles pour l’affectation

class A {}
class B {}
{
A a = new A();
B b;
b = a;
}